--- a/Ignacio_Fernandez_Vigil-Escalera.html
+++ b/Ignacio_Fernandez_Vigil-Escalera.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="estilos.css" rel="stilesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,11 +32,12 @@
             </tr>
             <tr>
                 <th>Josek</th>
-                <th>Alvaro</th>
+                <th>Juan</th>
+                <p>Hola mundo cruel</p>
 
             </tr>
-            
-    <table>
+        </tbody>
 
+        <table>
 </body>
 </html>
